# lab_electronica_digital_3

./: .gitignore  CMakeLists.txt  README.md  acceso.h  hola.c  holamundo.c  luces.h  main.c  usuarios.h
CONTROL_A/: acceso.h  luces.h  main.c  teclado.h  usuarios.h
DATA LOGGER/: CMakeLists.txt  lcd.h  main.c  pulsadores.h  senales.h
FRECUENCY_Measurement/: rpiPicoSegDisplay.py
FRECUENCY_Measurement/ARDUINO/Receptor/: Receptor.ino
FRECUENCY_Measurement/Generador_pulsos/: Generador_pulsos.ino
FRECUENCY_Measurement/INTERRUPCIONES/: main.c  main2.txt
FRECUENCY_Measurement/displays_c/: CMakeLists.txt  main.c
GPS/: CASIFINAL.TXT  CMakeLists.txt  NEW.h  SALOGPS.H  copy.txt  funciones.h  main.c  main.txt  maincopy.txt
PWM_COM/: CMakeLists.txt  funciones.h  main.h  main2.c
SHAKE/: CMakeLists.txt  FILE.txt  SHAKE256.c  funciones.h  hash_data.h
SHAKE/html/: _s_h_a_k_e256_8c.html  doxygen.css  files.html  funciones_8h.html  funciones_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html
SHAKE/html/search/: all_1.js  all_6.js  all_7.js  all_8.js  all_9.js  defines_0.js  defines_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js
SHAKE/latex/: _s_h_a_k_e256_8c.tex  files.tex  funciones_8h.tex  funciones_8h_source.tex  refman.tex
